--- a/package.json
+++ b/package.json
@@ -6,22 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rimraf .next out tmp output",
+    "test": "jest",
+    "test:basic": "jest tests/basic-system.test.ts",
+    "test:simple": "jest tests/simple-validation.test.ts",
+    "test:business": "jest tests/business-validation.test.ts",
+    "test:processors": "jest tests/processors-integration.test.ts", 
+    "test:docs": "jest tests/document-generation.test.ts",
+    "test:all": "jest tests/business-validation.test.ts tests/processors-integration.test.ts tests/document-generation.test.ts",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@types/multer": "^2.0.0",
+    "archiver": "^7.0.1",
+    "csv-writer": "^1.6.0",
+    "multer": "^2.0.2",
+    "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-dropzone": "^14.3.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@jest/globals": "^30.0.5",
+    "@tailwindcss/postcss": "^4",
+    "@types/archiver": "^6.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "jest": "^30.0.5",
+    "tailwindcss": "^4",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
